# app/Models/FaqList.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Models;
+
+use App\Traits\ActionBy;
+use App\Traits\ActionUser;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class FaqList extends Model
+{
+    use SoftDeletes, ActionBy, ActionUser;
+
+    protected $fillable = [
+        'faq_id',
+        'list_type', // FaqListTypeEnum
+    ];
+
+    public function faq(): BelongsTo
+    {
+        return $this->belongsTo(Faq::class);
+    }
+}
